# hike-finder-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  GUIDE.md  HANDOFF.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: cli.ps1  cli.sh  mcp.ps1  mcp.sh  web.ps1  web.sh
src/hike_finder/: access.py  cache.py  cli.py  compose.py  config.py  export.py  filters.py  format.py  geocode.py  geometry.py  naming.py  overpass.py  paths.py  search.py  server.py  snapshot.py  web.py
src/hike_finder/elevation/: __init__.py  api.py  base.py  gain.py  local_dem.py  quota.py
tests/: conftest.py  test_access.py  test_api.py  test_cache.py  test_cli.py  test_closure_live.py  test_compose.py  test_compose_live.py  test_coupling_live.py  test_export.py  test_gain.py  test_geocode.py  test_geometry.py  test_launchers.py  test_local_dem.py  test_naming.py  test_near_miss.py  test_overpass.py  test_quota.py  test_route_via.py  test_routing.py  test_routing_live.py  test_server.py  test_snapshot.py  test_track.py  test_track_live.py  test_web.py
tests/fixtures/: medved_relations.json  spindl_area.json
