[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hike-finder-mcp"
version = "0.1.0"
description = "MCP server: OSM-based hike search with real computed elevation gain and distance"
requires-python = ">=3.10"
dependencies = ["requests>=2.31", "mcp>=1.2"]

[project.optional-dependencies]
local-dem = ["rasterio>=1.3"]
dev = ["pytest>=8.0"]

[project.scripts]
hike-finder = "hike_finder.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
