[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hike-finder-mcp"
version = "0.1.0"
description = "OSM-based hike search (CLI, web UI, and MCP server) with real computed elevation gain and distance"
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
local-dem = ["rasterio>=1.3"]
dev = ["pytest>=8.0"]

[project.scripts]
hike-finder = "hike_finder.cli:main"
hike-finder-web = "hike_finder.web:main"
hike-finder-mcp = "hike_finder.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
